@@ -506,8 +506,10 @@ static Ttk_ElementOptionSpec LabelElementOptions[] =
 static void LabelSetup(
     LabelElement *c, Tk_Window tkwin, Ttk_State state)
 {
+    Ttk_Compound *compoundPtr = &c->compound;
+
     Tk_GetPixelsFromObj(NULL,tkwin,c->spaceObj,&c->space);
-    Ttk_GetCompoundFromObj(NULL,c->compoundObj,(int*)&c->compound);
+    Ttk_GetCompoundFromObj(NULL,c->compoundObj,(int*)compoundPtr);
 
     /*
      * Deal with TTK_COMPOUND_NONE.
