@@ -1,12 +1,14 @@
 2007-05-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
+	* unix/tkUnixSelect.c (ConvertSelection): 
+	* unix/tkUnixEvent.c (TkUnixDoOneXEvent): 
 	* generic/tkConfig.c (Tk_RestoreSavedOptions): 
 	* generic/tkCanvPs.c (TkCanvPostscriptCmd): 
 	* generic/tkOption.c (GetDefaultOptions): 
 	* unix/tkUnixRFont.c (TkpGetFontAttrsForChar, InitFont) 
 	(TkpGetFontFamilies, TkpGetSubFonts): 
-	* unix/tkUnixSend.c (TkpTestsendCmd): Squelch warnings from GCC type
-	aliasing. [Bug 1711985]
+	* unix/tkUnixSend.c (TkpTestsendCmd, RegOpen): Squelch warnings from
+	GCC type aliasing. [Bug 1711985 and others]
 
 2007-04-29  Daniel Steffen  <das@users.sourceforge.net>
 
